# mosh

./: configure.ac
src/: Makefile.am
src/frontend/: Makefile.am  mmclient.cc  mmclient.h  mmserver.cc  term-client.cc
src/protobufs/: Makefile.am  commandmessage.proto
src/term/: Makefile.am  commandstream.cc  commandstream.h
